show page complete

--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -10,7 +10,7 @@
     {% for restaurant in array %}
         <div class="col-lg-4">
             <div>
-                <a href="#{{restaurant.id}}"><h3>{{ restaurant.name }}</h3>
+                <a href="/show/{{restaurant.id}}"><h3>{{ restaurant.name }}</h3>
                 <img class="homeImg" src="{{ restaurant.img }}" alt="restaurant img"></a>
                 <p>{{ restaurant.foodType }} Cuisine</p>
                 <p class="inline">{{ restaurant.city }}, {{ restaurant.state }}</p>
