--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha256-KC5lAzGRWwscU0sTmXtd8ka5mt7Vk8a0L5JqOhwA28s= sha512-+f2l7T69JKgnn0+Lc8P0WpM4J34GfEIInTI+iLOQWekcR9KxXE1epKQkwzFIZ7mf12jQlCryh2HfZqS8GcpR8Q==" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="./css/main.css">
+    <link type="text/css" rel="stylesheet" href="http://localhost:3000/css/main.css">
     <title>{{ title }}</title>
 </head>
 <body>
@@ -18,6 +18,15 @@
                     <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-nav" href="index.html"><img src="/images/logoSm.png" style="padding-top: 10px; margin-right: 50px;" alt="Impressions logo image"></a>
+                </div>
+                <div class="navbar-header center">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
+                    <h1 class="center">{{header}}</h1>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="./pages/new.html"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
