--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-nav" href="index.html"><img src="/images/logoSm.png" style="padding-top: 10px; margin-right: 50px;" alt="Impressions logo image"></a>
+                    <a class="navbar-nav" href="http://localhost:3000/"><img src="/images/logoSm.png" style="padding-top: 10px; margin-right: 50px;" alt="Impressions logo image"></a>
                 </div>
                 <div class="navbar-header center">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
@@ -29,7 +29,7 @@
                     <h1 class="center">{{header}}</h1>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="./pages/new.html"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
+                    <li><a href="http://localhost:3000/pages/new.html"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
                 </ul>
             </div>
         </nav>
