--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -7,10 +7,19 @@ body {
     border-top-right-radius: 0;
 }
 
-.homeImg {
-    height: 200px;
-    width: 200px;
+.breathingRoom {
+    padding-bottom: 50px;
 }
+
+.homeImg {
+    height: 300px;
+    width: 300px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
 
 .inline {
     display: inline;
