--- a/src/server/views/edit.html
+++ b/src/server/views/edit.html
@@ -12,7 +12,7 @@
                     <div class="form-group">
                         <label for="inputEmail" class="col-lg-2 control-label">Name</label>
                         <div class="col-lg-10">
-                            <input type="text" class="form-control" id="name" placeholder="Restaurant Name" value="{{restaurant.name}}">
+                            <input type="text" class="form-control" id="name" maxlength="40" placeholder="Restaurant Name" value="{{restaurant.name}}">
                         </div>
                     </div>
                     <div class="form-group">
@@ -107,8 +107,13 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-lg-10 col-lg-offset-2">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                        <div class="col-lg-4 col-lg-offset-2 inline">
+                            <button type="submit" class="btn btn-primary submit">Submit</button>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-4 col-lg-offset-2 inline">
+                            <button type="submit" class="btn btn-danger delete">Delete</button>
                         </div>
                     </div>
             </fieldset>
