--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha256-KC5lAzGRWwscU0sTmXtd8ka5mt7Vk8a0L5JqOhwA28s= sha512-+f2l7T69JKgnn0+Lc8P0WpM4J34GfEIInTI+iLOQWekcR9KxXE1epKQkwzFIZ7mf12jQlCryh2HfZqS8GcpR8Q==" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="http://localhost:3000/css/main.css">
+    <link type="text/css" rel="stylesheet" href="../../css/main.css">
     <title>{{ title }}</title>
 </head>
 <body>
@@ -39,7 +39,7 @@
     {% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
-    <script src="http://localhost:3000/js/main.js" type="text/javascript"></script>
+    <script src="../../js/main.js" type="text/javascript"></script>
 </body>
 </html>
 
