--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-nav" href="http://localhost:3000/"><img src="/images/logoSm.png" style="padding-top: 10px; margin-right: 50px;" alt="Impressions logo image"></a>
+                    <a class="navbar-nav" href="/"><img src="/images/logoSm.png" style="padding-top: 10px; margin-right: 50px;" alt="Impressions logo image"></a>
                 </div>
                 <div class="navbar-header center">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
