--- a/src/server/views/show.html
+++ b/src/server/views/show.html
@@ -27,7 +27,7 @@
                     {%endfor%}
                 </div>
                 <br><br>
-                <a href="./edit/{{restaurant.id}}"><button class="btn btn-md btn-success">Edit</button></a>
+                <a href="../edit/{{restaurant.id}}"><button class="btn btn-md btn-success">Edit</button></a>
                 <button class="btn btn-md btn-warning">Delete</button>
             </div>
         </div>
