readme update and button links

--- a/src/server/views/edit.html
+++ b/src/server/views/edit.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-4 col-lg-offset-2 inline">
-                            <button type="submit" class="btn btn-danger delete">Delete</button>
+                            <a href="../show/{{restaurant.id}}"><button type="submit" class="btn btn-danger delete">Cancel</button></a>
                         </div>
                     </div>
             </fieldset>
