--- a/src/server/views/new.html
+++ b/src/server/views/new.html
@@ -28,7 +28,7 @@
                 </div>
                 <br><br>
                 <button class="btn btn-md btn-success">Edit</button>
-                <button class="btn btn-md btn-warning">Delete</button>
+                <a href="/"><button class="btn btn-md btn-warning">Cancel</button></a>
             </div>
         </div>
     </div>
