all i'm getting done tonight

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -2,6 +2,10 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+.row {
+    margin-bottom: 26px;
+}
+
 .navbar {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
