--- a/src/server/views/edit.html
+++ b/src/server/views/edit.html
@@ -6,7 +6,7 @@
 {% block content %}
 
     <div class="container">
-        <form class="form-horizontal">
+        <form class="form-horizontal" method="POST">
             <fieldset>
                 <legend>Edit Restaurant</legend>
                     <div class="form-group">
@@ -24,100 +24,45 @@
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">State</label>
                         <div class="col-lg-2">
-                            <select class="form-control statesDropDown" id="select">
-                                <option>{{restaurant.state}}</option>
+                            <select class="form-control statesDropDown" id="state">
+                                <option value="{{restaurant.state}}">{{restaurant.state}}</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">Cuisine</label>
                         <div class="col-lg-2">
-                            <select class="form-control foodTypeDropDown" id="select">
-                                <option>{{restaurant.foodType}}</option>
+                            <select class="form-control foodTypeDropDown" id="food_type">
+                                <option>{{restaurant.food_type}}</option>
                             </select>
-                        </div>
-                    </div>
-                    <!-- Everything above here good -->
-                    <div class="form-group">
-                        <label class="col-lg-2 control-label">Rating</label>
-                        <div class="col-lg-10">
-                            <div class="radio">
-                                <label id="5star">
-                                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                </label>
-                            </div>
-                            <div class="radio">
-                                <label id="4star">
-                                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star-empty"></span>
-                                </label>
-                            </div>
-                            <div class="radio">
-                                <label id="3star">
-                                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star-empty"></span>
-                                    <span class="glyphicon glyphicon-star-empty"></span>
-                                </label>
-                            </div>
-                            <div class="radio">
-                                <label id="2star">
-                                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star-empty"></span>
-                                    <span class="glyphicon glyphicon-star-empty"></span>
-                                    <span class="glyphicon glyphicon-star-empty"></span>
-                                </label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                                        <span class="glyphicon glyphicon-star"></span>
-                                        <span class="glyphicon glyphicon-star-empty"></span>
-                                        <span class="glyphicon glyphicon-star-empty"></span>
-                                        <span class="glyphicon glyphicon-star-empty"></span>
-                                        <span class="glyphicon glyphicon-star-empty"></span>
-                                </label>
-                            </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">Image</label>
                         <div class="col-lg-10">
-                            <input type="text" disabled="" class="form-control" id="imageSource" placeholder="Image source url">
+                            <input type="text" class="form-control" id="imageSource" placeholder="Image source url">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">Brief Description</label>
                         <div class="col-lg-10">
-                            <textarea class="form-control" rows="3" id="textArea" maxlength="500">{{restaurant.descript}}</textarea>
+                            <textarea class="form-control" rows="3" id="description" maxlength="500">{{restaurant.description}}</textarea>
                             <span class="help-block">500 character max.</span>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group inline">
                         <div class="col-lg-4 col-lg-offset-2 inline">
                             <button type="submit" class="btn btn-primary submit">Submit</button>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-lg-4 col-lg-offset-2 inline">
-                            <a href="../show/{{restaurant.id}}"><button type="submit" class="btn btn-danger delete">Cancel</button></a>
-                        </div>
-                    </div>
+
             </fieldset>
         </form>
+        <div class="form-group inline">
+                        <div class="col-lg-4 col-lg-offset-2 inline">
+                            <a href="../restaurants/{{restaurant.id}}"><button class="btn btn-danger delete">Cancel</button></a>
+                        </div>
+                    </div>
     </div>
 
 
