--- a/src/server/views/show.html
+++ b/src/server/views/show.html
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
             <div class="col-lg-6 employees">
-                <a href="#"><button class="btn btn-md btn-primary">Add Employee</button></a>
+                <a href="#"><button class="btn btn-sm btn-primary">Add Employee</button></a>
                 <table class="table table-hover">
                     <thead>
                         <tr class="success">
