--- a/src/server/views/edit.html
+++ b/src/server/views/edit.html
@@ -24,15 +24,15 @@
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">State</label>
                         <div class="col-lg-2">
-                            <select class="form-control statesDropDown" id="state">
-                                <option value="{{restaurant.state}}">{{restaurant.state}}</option>
+                            <select class="form-control statesDropDown" id="select">
+                                <option>{{restaurant.state}}</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">Cuisine</label>
                         <div class="col-lg-2">
-                            <select class="form-control foodTypeDropDown" id="food_type">
+                            <select class="form-control foodTypeDropDown" id="select">
                                 <option>{{restaurant.food_type}}</option>
                             </select>
                         </div>
@@ -46,7 +46,7 @@
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">Brief Description</label>
                         <div class="col-lg-10">
-                            <textarea class="form-control" rows="3" id="description" maxlength="500">{{restaurant.description}}</textarea>
+                            <textarea class="form-control" rows="3" id="textArea" maxlength="500">{{restaurant.description}}</textarea>
                             <span class="help-block">500 character max.</span>
                         </div>
                     </div>
@@ -59,10 +59,10 @@
             </fieldset>
         </form>
         <div class="form-group inline">
-                        <div class="col-lg-4 col-lg-offset-2 inline">
-                            <a href="../restaurants/{{restaurant.id}}"><button class="btn btn-danger delete">Cancel</button></a>
-                        </div>
-                    </div>
+            <div class="col-lg-4 col-lg-offset-2 inline">
+                <a href="../restaurants/{{restaurant.id}}"><button class="btn btn-danger delete">Cancel</button></a>
+            </div>
+        </div>
     </div>
 
 
