--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -29,7 +29,7 @@
                     <h1 class="center">{{header}}</h1>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="../../pages/new.html"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
+                    <li><a href="/new"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
                 </ul>
             </div>
         </nav>
