fix on show, updated .gitignore for envs

--- a/src/server/views/show.html
+++ b/src/server/views/show.html
@@ -14,7 +14,7 @@
                 <h4>{{restaurant.food_type}} Cuisine</h4>
                 <h4><em>Located in {{restaurant.city}}, {{restaurant.state}}</em></h4>
                 <br><br>
-                <p>{{restaurant.descript}}</p>
+                <p>{{restaurant.description}}</p>
                 <p class="inline">Rating: </p>
                 <div class="inline ratingStars" data-rating-value='{{restaurant.rating}}'>
                 </div>
