--- a/src/server/views/edit.html
+++ b/src/server/views/edit.html
@@ -40,7 +40,7 @@
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">Image</label>
                         <div class="col-lg-10">
-                            <input type="text" class="form-control" id="imageSource" name="img" placeholder="Image source url">
+                            <input type="text" class="form-control" id="imageSource" name="img" placeholder="Image source url" value="{{restaurant.img}}">
                         </div>
                     </div>
                     <div class="form-group">
@@ -55,7 +55,6 @@
                             <button type="submit" class="btn btn-primary submit">Submit</button>
                         </div>
                     </div>
-
             </fieldset>
         </form>
         <div class="form-group inline">
