--- a/src/server/views/new.html
+++ b/src/server/views/new.html
@@ -24,7 +24,7 @@
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">State</label>
                         <div class="col-lg-2">
-                            <select class="form-control statesDropDown" name="select">
+                            <select class="form-control statesDropDown" name="state">
                                 <option disabled="">Select State</option>
                             </select>
                         </div>
