post edit review complete

--- a/src/server/views/edit_review.html
+++ b/src/server/views/edit_review.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="container">
-        <form class="form-horizontal" method="POST" action="/restaurants/{{restaurant.id}}/reviews/{{review.id}}/edit">
+        <form class="form-horizontal" method="POST" action="/restaurants/{{rest_id}}/reviews/{{review.id}}/edit">
             <fieldset>
                 <legend> </legend>
                 <div class="form-group">
