--- a/src/server/views/new_review.html
+++ b/src/server/views/new_review.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="container">
-        <form class="form-horizontal" method="POST" action='/restaurants/{{review.restaurant_id}}/reviews'>
+        <form class="form-horizontal" method="POST" action='/restaurants/reviews'>
             <fieldset>
                 <legend> </legend>
                     <div class="form-group">
