index, show, edit, new review, new restaurant routes working

--- a/src/server/views/edit.html
+++ b/src/server/views/edit.html
@@ -59,7 +59,7 @@
         </form>
         <div class="form-group inline">
             <div class="col-lg-4 col-lg-offset-2 inline">
-                <a href="../restaurants/{{restaurant.id}}"><button class="btn btn-danger delete">Cancel</button></a>
+                <a href="/restaurants/{{restaurant.id}}"><button class="btn btn-danger delete">Cancel</button></a>
             </div>
         </div>
     </div>
