all get routes working as well as cancel buttons

--- a/src/server/views/new_review.html
+++ b/src/server/views/new_review.html
@@ -44,7 +44,7 @@
         </form>
         <div class="form-group row">
             <div class="col-lg-4 col-lg-offset-2">
-                <a href="/restaurants/{{restaurant.id}}"><button class="btn btn-danger">Cancel</button></a>
+                <a href="/restaurants/{{restID}}"><button class="btn btn-danger">Cancel</button></a>
             </div>
         </div>
     </div>
