--- a/src/server/views/edit_review.html
+++ b/src/server/views/edit_review.html
@@ -43,7 +43,7 @@
         </form>
         <div class="form-group row">
             <div class="col-lg-4 col-lg-offset-2">
-                <a href="/restaurants/{{restaurant.id}}"><button class="btn btn-danger">Cancel</button></a>
+                <a href="/restaurants/{{rest_id}}"><button class="btn btn-danger">Cancel</button></a>
             </div>
         </div>
     </div>
