--- a/src/server/views/edit_review.html
+++ b/src/server/views/edit_review.html
@@ -17,7 +17,7 @@
                 <div class="form-group">
                     <label for="textArea" class="col-lg-2 control-label">Date</label>
                     <div class="col-lg-3">
-                        <input type="date" class="form-control" id="date" name="review_date" value="{{review.review_date}}" required>
+                        <input type="date" class="form-control" id="date" name="review_date" value="{{review.review_date | date("Y-m-d") }}" required>
                     </div>
                 </div>
                 <div class="form-group">
