--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -16,12 +16,13 @@ body {
 }
 
 .homeImg {
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 250px;
     padding-right: 10px;
     padding-bottom: 10px;
     border-right: 1px solid white;
     border-bottom: 1px solid white;
+    display: inline-block;
 }
 
 .right {
@@ -52,4 +53,14 @@ h1.center {
 
 .warningColor {
     color: #E637BF;
+}
+
+#roundMe {
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+}
+
+#halfRound {
+    border-top-right-radius: 4px;
+
 }
