--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -30,14 +30,19 @@
                     <h2 class="center">{{header}}</h2>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/new"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
+                    {% if admin %}
+                        <li><a href="/new"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
+                    {% endif %}
+                    {% if user %}
+                        <li><a href="/logout"><span class="glyphicon glyphicon-remove-sign"></span> logout</a></li>
+                    {% else %}
+                        <li><a href="/login"><span class="glyphicon glyphicon-user"></span> login/signup</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
     </header>
-    {% block content %}
-
-    {% endblock %}
+    {% block content %}{% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
     <script src="../../js/main.js" type="text/javascript"></script>
