--- a/src/server/views/new_review.html
+++ b/src/server/views/new_review.html
@@ -12,12 +12,6 @@
             <fieldset>
                 <legend> </legend>
                     <div class="form-group">
-                        <label for="inputEmail" class="col-lg-2 control-label">User Name</label>
-                        <div class="col-lg-3">
-                            <input type="text" class="form-control" id="name" name="user_name" placeholder="User Name" value="{{refill.user_name}}" autofocus required>
-                        </div>
-                    </div>
-                    <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">Date</label>
                         <div class="col-lg-3">
                             <input type="date" class="form-control" id="date" name="review_date" value="{{date | date("Y-m-d")}}"required>
@@ -26,7 +20,7 @@
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">Rating</label>
                         <div class="col-lg-4">
-                            <span class="glyphicon glyphicon-thumbs-down"></span><span class="glyphicon glyphicon-thumbs-up right"></span>
+                            <span class="glyphicon glyphicon-thumbs-down"></span> -------------> <span class="glyphicon glyphicon-thumbs-up right"></span>
                             {% if refill %}
                                 <input type="range" name='rating' min="1" max="5" value="{{refill.rating}}" step="1" required />
                             {% else %}
