--- a/src/server/views/show.html
+++ b/src/server/views/show.html
@@ -16,7 +16,7 @@
                 <br><br>
                 <p>{{restaurant.description}}</p>
                 <p class="inline">Rating: </p>
-                <div class="inline ratingStars" data-rating-value='{{restaurant.rating_num}}'>
+                <div class="inline ratingStars" data-rating-value='{{rating_num}}'>
                 </div>
                 <br><br>
                 {% if admin %}
@@ -75,7 +75,9 @@
                             <p class="reviewText longText" style="display: none;">"{{rating.review}}"</p>
                             <p class="reviewText shortText">"{{rating.short_review}}<a class="showMoreTextLink">...</a>"</p>
                             <div class="inline ratingStars" data-rating-value={{rating.rating}}></div>
-                            <a href="/restaurants/{{restaurant.id}}/reviews/{{rating.id}}/edit">Edit</a>
+                            {% if rating.canEdit %}
+                                <a href="/restaurants/{{restaurant.id}}/reviews/{{rating.id}}/edit">Edit</a>
+                            {% endif %}
                         </div>
                     </div>
                 {%endfor%}
