making it public

--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -36,7 +36,7 @@
                     {% if user %}
                         <li><a href="/logout"><span class="glyphicon glyphicon-remove-sign"></span> logout</a></li>
                     {% else %}
-                        <li><a href="/facebook"><span class="glyphicon glyphicon-user"></span> login/signup</a></li>
+                        <li><a href="/facebook"><span class="glyphicon glyphicon-user"></span> Login/Register</a></li>
                     {% endif %}
                 </ul>
             </div>
